{
    "name": "GameplayInput_Action",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "2f781f9c-49e7-44c6-ae9a-fa5f02febb62",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "cb62e8e0-b47b-4b29-bc10-69579b03972a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4640506f-112e-4156-a377-ca1172296154",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "41efb8db-8b3b-4662-966a-00bf5a767c84",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e709d412-6692-4a16-aea0-ebbb56f16c9f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8723a006-5457-4363-9d79-39fb4682f3ec",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}